<?xml version="1.0"?>
<package>
  <name>dhand_control</name>
  <version>0.0.1</version>
  <description>The dhand_control package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/dhand_ros_pkg</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ros_controllers</run_depend>
  
</package>
