<?xml version="1.0"?>
<package>
  <name>dhand_ros_pkg</name>
  <version>1.0.0</version>
  <description>The dhand_ros_pkg package</description>
  
  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/dhand_ros_pkg</url>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
	<metapackage />
  </export>
</package>
